--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 	transition: .4s;
 }
 .hero{
-	height: 87vh;
+	height: auto;
 	width: 100%;
 	background-repeat: no-repeat;
 	background-position: 80%;
@@ -61,6 +61,53 @@ nav ul li a:hover{
 	color: brown;
 	transition: .4s;
 }
+.checkbtn{
+	font-size: 30px;
+	color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+#check{
+    display: none;
+}
+@media (max-width: 952px){
+    nav ul li a{
+        font-size: 16px;
+    }
+}
+@media (max-width: 858px){
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 145px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 50px 0;
+        line-height: 30px; 
+    }
+    nav ul li a{
+        font-size: 20px;
+    }
+    a:hover,a.active{
+        background: none;
+        color: #0082e6;
+    }
+    #check:checked ~ ul{
+        left: 0;
+    }
+}
 .btn{
 	background-color:brown;
 	color: white;
@@ -75,14 +122,10 @@ nav ul li a:hover{
 	transform: scale(1.2);
 }
 .content{
-	position: absolute;
-	top: 50%;
-	left:8%;
-	transform: translateY(-50%);
-	border-top: 1px solid brown;
-	border-bottom: 1px solid brown;
 	padding-top: 20px;
-	
+	overflow-x: hidden;
+	min-height: auto;
+	text-align: center;
 }
 h1{
 	color: #030001;
@@ -98,33 +141,6 @@ h4{
 	color: #030001;
 	font-size: 20px;
 }
-.newsletter form{
-	width: 380px;
-	max-width: 100%;
-	position: relative;
-}
-.newsletter form input:first-child{
-	display: inline-block;
-	width: 100%;
-	padding: 14px 130px 14px 15px;
-	border: 2px solid brown;
-	outline: none;
-	border-radius: 30px;
-}
-.newsletter form input:last-child{
-	position: absolute;
-	display: inline-block;
-	outline: none;
-	border: none;
-	padding: 10px 30px;
-	border-radius: 30px;
-	background-color:brown;
-	color: white;
-	box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
-	top: 6px;
-	right: 6px; 
-}
-
 .about{
 	width: 100%;
 	padding: 100px 0px;
