--- a/style.css
+++ b/style.css
@@ -238,6 +238,7 @@ button:hover{
 	width: 100%;
 	padding-right: 100px;
 	padding-left: 100px;
+	margin-bottom: 45px;
 }
 .title h2{
 	color: #030001;
