--- a/style.css
+++ b/style.css
@@ -304,13 +304,39 @@ input[type=text], select, textarea {
 	flex: 0 0 auto;
 	
 }
+.card2{
+	height: 300px;
+	width: 335px;
+	padding: 0px 0px;
+	background: brown;
+	border-radius: 20px;
+	margin: 15px;
+	
+	overflow: hidden;
+	text-align: center;
+	transition: 0.2s all;
+	flex: 0 0 auto;
+	
+}
 
 .card:hover{
 	z-index: 1;
 	box-shadow: 0 8px rgba(0,0,0,0.2);
 	transform: scale(1.05);
 }
+.card2:hover{
+	z-index: 1;
+	box-shadow: 0 8px rgba(0,0,0,0.2);
+	transform: scale(1.05);
+}
 .card i{
+	font-size: 50px;
+	display: block;
+	text-align: center;
+	margin: 25px 0px;
+	color: white;
+}
+.card2 i{
 	font-size: 50px;
 	display: block;
 	text-align: center;
@@ -344,7 +370,22 @@ h5{
 	border-radius: 30px;
 	transition: .4s; 
 }
+.card2 .button{
+	background-color:white;
+	color: #030001;
+	text-decoration: none;
+	border: 2px solid transparent;
+	font-weight: bold;
+	padding: 9px 22px;
+	border-radius: 30px;
+	transition: .4s; 
+}
 .card .button:hover{
+	background-color: transparent;
+	border: 2px solid white;
+	cursor: pointer;
+}
+.card2 .button:hover{
 	background-color: transparent;
 	border: 2px solid white;
 	cursor: pointer;
