--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 .active{ 
 	color: white;
 	display: inline-block;
-	background-color: brown;
+	background-color: #2B60DE;
 	padding: 13px 30px;
 }
 .active:hover{
@@ -34,17 +34,18 @@ nav{
 	padding-left: 5%;
 	padding-right: 5%;
 	padding-bottom: 20px;
-	background-color: #dfd9d9;
+	background-color: #d9dadf;
+	
 }
 .logo{
-	color: brown;
+	color: #2B60DE;
 	font-size: 35px;
 	letter-spacing: 1px;
 	cursor: pointer;
 	font-family: 'ink free';
 }
 span{
-	color: brown;
+	color: #2B60DE;
 }
 nav ul li{
 	list-style-type: none;
@@ -58,7 +59,7 @@ nav ul li a{
 	text-transform: capitalize;
 }
 nav ul li a:hover{
-	color: brown;
+	color: #2B60DE;
 	transition: .4s;
 }
 .checkbtn{
@@ -109,7 +110,7 @@ nav ul li a:hover{
     }
 }
 .btn{
-	background-color:brown;
+	background-color:#2B60DE;
 	color: white;
 	text-decoration: none;
 	border: 2px solid transparent;
@@ -144,6 +145,7 @@ h4{
 .about{
 	width: 100%;
 	padding: 100px 0px;
+	background-color: #f2f2f3;
 }
 
 .about-text{
@@ -163,10 +165,10 @@ h4{
 	justify-content: space-around;
 }
 .main2{
-	margin-top: 5px;
+	padding: 100px 0px;
 	position: relative;
 	width: 100%;
-	height: 400px;
+	height: auto;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -178,12 +180,25 @@ h4{
 	text-transform: capitalize;
 	margin-bottom: 20px;
 }
+.skill-box{
+	align-items: center;
+	justify-content: center;
+}
+.skill-card{
+	border-radius: 10px;
+	margin: 20px;
+	box-shadow: 5px 5px 5px #7e9de4;
+}
+.skill-card img{
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
 .skills button{
 	
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background:  brown;
+	background:  #2B60DE;
 	margin: 22px 10px;
 	color: white;
 	text-decoration: none;
@@ -201,7 +216,7 @@ h4{
 	margin-bottom: 20px;
 }
 .about-text h5{
-	color: brown;
+	color: #2B60DE;
 	letter-spacing: 2px;
 	font-size: 22px;
 	margin-bottom: 25px;
@@ -215,7 +230,7 @@ h4{
 	margin-bottom: 45px;
 }
 button{
-	background-color:brown;
+	background-color:#2B60DE;
 	color: white;
 	text-decoration: none;
 	border: 2px solid transparent;
@@ -234,11 +249,18 @@ button:hover{
 
 .service{
 	height: 50%;
-	background: #ffffff;
+	background: #f2f2f3;
 	width: 100%;
-	padding-right: 100px;
-	padding-left: 100px;
-	margin-bottom: 45px;
+	padding: 80px 250px;
+	margin: 0px 0px;
+	
+}
+.serviceUI{
+	height: 50%;
+	background: #fff;
+	width: 100%;
+	padding: 80px 250px;
+	margin: 0px 0px;
 }
 .title h2{
 	color: #030001;
@@ -279,7 +301,7 @@ input[type=text], select, textarea {
   
   input[type=submit]:hover {
 	background-color: transparent;
-	color: brown;
+	color: #2B60DE;
 	border: 4px solid #030001;
   }
   
@@ -294,7 +316,7 @@ input[type=text], select, textarea {
 	height: 550px;
 	width: 335px;
 	padding: 0px 0px;
-	background: brown;
+	background: #2B60DE;
 	border-radius: 20px;
 	margin: 15px;
 	
@@ -308,7 +330,7 @@ input[type=text], select, textarea {
 	height: 300px;
 	width: 335px;
 	padding: 0px 0px;
-	background: brown;
+	background: #2B60DE;
 	border-radius: 20px;
 	margin: 15px;
 	
@@ -346,7 +368,7 @@ input[type=text], select, textarea {
 hr{
 	width: 70%; 
 	margin: auto; 
-	border-top:6px solid brown;
+	border-top:6px solid #2B60DE;
 	
 }
 h5{
@@ -405,7 +427,7 @@ h5{
 	margin-bottom: 25px;
 }
 .contact-me .button-two{
-	background-color:brown;
+	background-color:#2B60DE;
 	color: white;
 	text-decoration: none;
 	border: 2px solid transparent;
@@ -416,7 +438,7 @@ h5{
 }
 .contact-me .button-two:hover{
 	background-color: transparent;
-	border: 2px solid brown;
+	border: 2px solid #2B60DE;
 	cursor: pointer;
 }
 footer{
@@ -457,7 +479,7 @@ footer p:nth-child(2){
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background:  brown;
+	background:  #2B60DE;
 	border-radius: 50%;
 	margin: 22px 10px;
 	margin-bottom: 50px;
@@ -475,7 +497,7 @@ footer p:nth-child(2){
 }
 .end{
 	position: absolute;
-	color:brown;
+	color:#2B60DE;
 	bottom: 35px;
 	font-size: 14px; 
 }
@@ -506,7 +528,7 @@ footer p:nth-child(2){
     right: 10px;
     width: 20px;
     height: 30px;
-    background: brown;
+    background: #2B60DE;
     color: white;
     border: none;
     outline: none;
@@ -545,7 +567,7 @@ body.active-popup .popup{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background:  brown;
+	background:  #2B60DE;
 	border-radius: 50%;
 	margin: 22px 10px;
 	margin-bottom: 10px;
@@ -562,7 +584,7 @@ body.active-popup .popup{
 	margin-top: 20px;
 }
 .popup p{
-	color: brown;
+	color: #2B60DE;
 	font-size: x-large;
 	font-style: italic;
 
@@ -571,10 +593,12 @@ body.active-popup .popup{
 	left: 0;
 	position: absolute;
 	margin-top: 15%;
+	margin-left: 100px;
 }
   
 .nxt-btn {
 	right: 0;
 	position: absolute;
 	margin-top: 15%;
+	margin-right: 100px;
 }
